SFC grammar fixes. Turma C rjust added (RA < 010)

--- a/Articles/SFC/Analytical.org
+++ b/Articles/SFC/Analytical.org
@@ -576,7 +576,7 @@ print(
 :end:
 
 
-* From short- to long-run equilibria
+* From short- to long-run equilibria :ignore:
 
 In this Section, we show the implications of residential investment inclusion into a SSM-SFC model. First, we present the short-run dynamics and then move to the traverse and then to the long-run equilibrium (denoted by $\star$).
 
