--- a/Articles/SFC/Conclusion.org
+++ b/Articles/SFC/Conclusion.org
@@ -23,6 +23,4 @@ Future research should increase the complexity of this model in order to underst
 Some extensions could be exploring other determinants of its growth rate and  its effects on banks' net financial wealth.
 This emerging ``housing agenda'' should also moves towards institutional grounds.
 For example, future research could assess which institutional arrangements allow/inhibit the connection between house bubble, credit granting/rationing and financial instability.
-Nevertheless, this is a first step in a wider research agenda on the role of residential investment for economic growth and business cycles. 
-
-
+Nevertheless, this is a little step in a wider research agenda on the role of residential investment for economic growth and business cycles.
