--- a/Articles/SFC/Empirical.org
+++ b/Articles/SFC/Empirical.org
@@ -928,7 +928,7 @@ textcite:goodhart_house_2008 for instance, estimate a time-series fixed effects 
 textcite:wood_house_2020 report that house prices are relevant for describing household indebtedness from 1980 to 2017 in 18 advance economies.
 However, both studies do not include residential investment.
 textcite:Arestis_Residential_2014, on the other side, include residential investment. Using a ARDL model for 17 OECD countries from 1970 to 2013, the authors report that banking credit and real house prices are the most statistically significant variables for real residential investment in the US.
-Although those approaches are interesting, they fails to take into account the connection between asset bubbles and aggregate demand.
+Although those approaches are interesting, they fail to take into account the connection between asset bubbles and aggregate demand.
 
 #+LATEX:\\
 
