--- a/Articles/SFC/Introduction.org
+++ b/Articles/SFC/Introduction.org
@@ -26,7 +26,7 @@ This paper is a first step in building the connection between house price inflat
 In order to do so, we build a fully specified parsimonious Sraffian supermultiplier stock-flow consistent model (SSM-SFC) with residential investment.
 
 The remainder of this paper is organized as follows.
-Section ref:sec:empirical discuss some residential investment related stylized facts for the US economy related to house bubble, residential investment and its macroeconomic implications.
+Section ref:sec:empirical discuss some residential investment related stylized facts for the US economy and its macroeconomic implications.
 Section ref:sec:Model presents a SSM-SFC model  with asset bubbles and two real assets: firms' capital and household' real estate. 
 Section ref:sec:runs evaluates short- and long-run equilibria as well as traverse in order to assess the consequences  of the inclusion of residential investment to the output level, growth rate and to stock-flow ratios.
 Next, Section ref:sec:Experiments evaluates this relations through numerical simulations.
