--- a/Articles/SFC/Model.org
+++ b/Articles/SFC/Model.org
@@ -115,7 +115,7 @@ K = (1-k)\cdot K + k\cdot K
 $$
 #+end_export
 
-Following Sraffian literature, functional income distribution is determined both by historical-institutional factors and class struggle. 
+Following Sraffian literature, functional income distribution is determined by historical-institutional factors and class struggle.
 As consequence, wage-share ($\omega$) is considered exogenous to our model and define total wages as ($W$, Eq. ref:_W):
 
 #+BEGIN_SRC latex
@@ -410,7 +410,7 @@ Firms finance part of their investment with credit ($L_f$) and capitalists house
 For simplicity, we assume null bank spreads ($\sigma_{mo} = \sigma_l = 0$) so interest rate on mortgages ($r_{mo}$) and on loans ($r_{l}$)
 are the same as on deposits ($r_{m}$) which is  exogenously determined by banks.
 Banks net balances ($NFW_b$) are defined by interests received net of interests payments. 
-As those interests are the same, banks net wealth is necessarily zero (see table \ref{Matriz_Estoques}) and deposits are residuum:
+As those interests are the same, banks net wealth is necessarily zero (see table \ref{Matriz_Estoques}) and deposits are /residuum/:
 
 #+BEGIN_SRC latex
 \begin{equation}
@@ -475,7 +475,7 @@ $$
 
 As mentioned before, we assume that workers expend ($C_w$) what they earn ($W$). 
 For simplicity, we consider that wages are the only source of workers' disposable income ($YD_{w}$) and do not have access to consumption loans, so worker' saving ($S_{hw}$) are null.
-Therefore, accordingly to our hypothesis, workers' do not hold both net financial ($NFW_{w}$) and total wealth ($V_{w}$).
+Therefore, accordingly to our hypothesis, workers do not hold both net financial ($NFW_{w}$) nor total wealth ($V_{w}$).
 
 #+BEGIN_SRC latex
 \begin{equation}
@@ -567,7 +567,7 @@ At odds with SFC literature, savings are not equal to net balance ($NFW_{k}$, Eq
 #+end_export
 
 
-As mentioned before, capitalist households are the only institutional sector investing in houses which are financed by mortgages as in equation (ref:EqMO).
+As mentioned before, capitalist households are the only institutional sector investing in houses which are financed by mortgages as in equation ref:EqMO.
 Thus, capitalists' total debt stock ($D$) is the sum of mortgage and consumption loans (Equation ref:k_D)
 
 #+BEGIN_EXPORT latex
